# tessera

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  tessera.sln
scripts/: join.tess  pyramid.tess  test_compile.tess
src/: CMakeLists.txt
src/tessera/: tessera.vcxproj.filters
src/tessera/include/tessera/: error.h  script.h
src/tessera/internal/: allocator.cpp  allocator.h  cluster.cpp  cluster.h  cluster_expr.cpp  evaluation_context.cpp  evaluation_context.h  execution_state.cpp  execution_state.h  expression.cpp  field_ref.cpp  function_def.cpp  gc_heap.cpp  gc_heap.h  geometry.cpp  geometry.h  graph_ptr.cpp  graph_ptr.h  lambda.cpp  lambda.h  lambda_impl.h  lay_expr.cpp  number.h  ops.cpp  ops.h  script.cpp  script_impl.cpp  script_impl.h  stack_machine.cpp  stack_machine.h  tessera_impl.h  text_range.cpp  text_range.h  tile.cpp  tile_def.h  tile_impl.cpp  tile_impl.h  tile_patch.cpp  tile_patch_impl.cpp  tile_patch_impl.h  (+5 more)
src/tessera/internal/parser/: basic_expr_parser.cpp  cluster_expr_parser.cpp  cluster_expr_parser.h  cond_expr_parser.cpp  expr_parser.cpp  expr_parser.h  function_parser.cpp  lay_expr_parser.cpp  object_expr_parser.h  special_parser.cpp  special_parser.h  util.h  where_parser.cpp  with_parser.cpp
src/tessera_workbench/: amman-A5.tess  pyramid.tess  tessera_workbench.cpp
tessera/: tessera.cpp  tessera.vcxproj  tessera.vcxproj.filters  tesserascript.cpp
tessera/include/tessera/: error.h  old_tessera.h  old_tessera_script.h  script.h  tableau.h  tessera.h  tessera_script.h  tesserascript.h  tile.h  tile_patch.h
tessera/internal/: allocator.cpp  allocator.h  assignment_block.cpp  assignment_block.h  cluster.cpp  cluster.h  cluster_expr.cpp  cluster_expr.h  error.cpp  eval_context.cpp  eval_context.h  eval_context_old.cpp  evaluation_context.cpp  evaluation_context.h  execution_ctxt.cpp  execution_ctxt.h  execution_state.cpp  execution_state.h  expr_value.cpp  expr_value.h  expression.cpp  expression.h  field_ref.cpp  field_ref.h  function.cpp  function.h  function_def.cpp  function_def.h  geometry.cpp  geometry.h  impl_pool.cpp  impl_pool.h  lambda.cpp  lambda.h  lambda_impl.h  lay_expr.cpp  lay_expr.h  lexer.cpp  lexer.h  math_util.cpp  (+50 more)
tessera/internal/parser/: assignment_parser.cpp  assignment_parser.h  basic_expr_parser.cpp  basic_expr_parser.h  basic_stmt_parser.cpp  basic_stmt_parser.h  cluster_expr_parser.cpp  cond_expr_parser.cpp  cond_expr_parser.h  config.h  ctrl_struct_stmts_parser.cpp  ctrl_struct_stmts_parser.h  exception.cpp  exception.h  expr.cpp  expr.h  expr_def.h  expr_parser.cpp  expr_parser.h  function_parser.cpp  function_parser.h  keywords.cpp  keywords.h  lay_expr_parser.cpp  lay_expr_parser.h  object_expr_parser.cpp  object_expr_parser.h  object_ref_expr_parser.cpp  object_ref_expr_parser.h  old_ctrl_struct_stmts_parser.cpp  old_ctrl_struct_stmts_parser.h  old_object_ref_expr_parser.cpp  old_parser.cpp  old_parser.h  parser.cpp  parser.h  script_parser.cpp  script_parser.h  skipper.cpp  skipper.h  (+12 more)
tessera_workbench/: amman-A5.tess  example.tess  hex.tess  join.tess  penrose.tess  plastic.tess  pyramid.tess  sierpinski.tess  tessera_workbench.cpp  tessera_workbench.vcxproj  tessera_workbench.vcxproj.filters  test.tess  test_compile.tess
